added internal links

--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -118,10 +118,10 @@
 <img src="./../images/brand strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
       </div>
       <div class="col">
-    <p class=" mb-1">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? I can help
+    <p class=" mb-1">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
   you create a brand that represents you and communicates for you by creating the suite of brand marketing collateral that
   you need for promoting your business.</br>
-  I can help you create the following elements:
+  We can help you create the following elements:
   </p>
     <p class=" mb-1">
     <ul> 
