--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -122,7 +122,7 @@
         help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
         usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
        </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
