--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -115,16 +115,16 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="./../images/Mockup flyer.png" alt="sample colour palettes for selection" class="service-image">
+        <img src="./../images/mockup.png" alt="sample colour palettes for selection" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
-        know who your audience is before creating advertising material. I can help with this and make sure that each piece is
+        know who your audience is before creating advertising material. We can help with this and make sure that each piece is
         targeting the right customers.
-        To help convince your customers to buy your product, I can help you build trust by creating with you the marketing
+        To help convince your customers to buy your product, we can help you build trust by creating with you the marketing
         collateral that will set you as an authority in your industry.
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
