--- a/creative_services/templates.html
+++ b/creative_services/templates.html
@@ -121,11 +121,11 @@
         <p class=" mb-1">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
         presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
         communicate effectively.
-        I can create a template for you to use as a base for every presentation or help you design your next top notch deck by
+        We can create a template for you to use as a base for every presentation or help you design your next top notch deck by
         structuring the message and design layout that will set you up for success.
 
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
