--- a/digital_marketing/digitalstrategy.html
+++ b/digital_marketing/digitalstrategy.html
@@ -124,7 +124,7 @@
         through online channels. With the goals established, various tactics can then be put in place to achieve our marketing
         objectives.
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
