--- a/digital_marketing/emailmarketing.html
+++ b/digital_marketing/emailmarketing.html
@@ -119,13 +119,13 @@
           alt="Gmail inbox with unread emails" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Email marketing leverages the contact details of your existing customers, or prospects that have signed up to your
-        website, to promote your products or services. It is often used to build a community around your brand.
+        <p class=" mb-1">Email marketing leverages the contact details of your existing customers, or prospects that have signed up on your
+        <a href="./../web_development/webdesign.html">website</a> or <a href="./../web_development/landingpages.html">landing page</a>, to promote your products or services. It is often used to build a community around your brand.
         
         <br/>We also create email sequences that works together with your sales funnel to drive lead generations and overall sales.
 
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
