--- a/digital_marketing/smmanagement.html
+++ b/digital_marketing/smmanagement.html
@@ -119,7 +119,7 @@
       </div>
       <div class="col">
         <p class=" mb-1">Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
-        business. After understanding your marketing objectives, I can help you select the most relevant social media
+        business. After understanding your marketing objectives, we can help you select the most relevant social media
         platform(s) for your target audience and put a plan in place to make use of your social media potential.
         Not sure if social media is the tool for you? Here is the top 3 benefits:
         - Increase your brand awareness
@@ -127,7 +127,7 @@
         - Nurture relationship with customers
 
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
