--- a/digital_marketing/websitemarketing.html
+++ b/digital_marketing/websitemarketing.html
@@ -119,12 +119,12 @@
       <div class="col">
         <p class=" mb-1">With website marketing you are leveraging you website as a tool to promote your products or offers. To bring more
         traffic and potential customers to your website you want to maximise the opportunities potential customers have to find
-        you easily and fast. I can help you optimise your website to rank higher on search engines to help you get in front of
+        you easily and fast. We can help you optimise your website to <a href="./../web_development/seo.html">rank higher on search engines</a> to help you get in front of
         your target audience.
 
 
           </br>
-          I can help you with:
+          We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
