--- a/mywork.html
+++ b/mywork.html
@@ -255,10 +255,12 @@
       </div>
     </div>
   </div>
-<div class="row mt-2 g-0">
-  <div class="col-12  contact-button">
-    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+<div class="row mt-2">
+<div class="col-md-4"></div>
+  <div class="col-md-4 text-center work-button">
+    <a href="index.html#contact" class="contact-link " title="Contact me">Work with us</a>
   </div>
+  <div class="col-md-4"></div>
 </div>
 
 
@@ -266,12 +268,23 @@
 
 </body>
 <footer>
-<div class="social-links d-flex justify-content-center">
-  <a href="https://www.facebook.com/creafixdesign" title="Facebook page"><i class="fab fa-facebook"></i></a>
-  <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
-  <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
-  <a href="https://www.linkedin.com/company/creafix-design" title="LinkdIn profile"><i class="fab fa-linkedin"></i></a>
-</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
+
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 </html>
