--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -118,9 +118,9 @@
         <img src="../images/Landingpage.PNG" alt="Example of landing page presented on a laptop screen" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Landing pages are common stand-alone pages used in digital marketing where visitors "land" after they click on a link.
-        This type of webpages typically has a single objective, make the visitor complete the call to action. Focusing on one
-        goal makes this type of pages the best tool to increase conversion rates of your marketing campaigns. We design landing
+        <p class=" mb-1">Landing pages are common stand-alone pages used in digital marketing. This is where visitors "land" after they click on a link you've shared in an <a href="./../digital_marketing/smmanagement.html" >ad on social media</a> or <a href= "./../digital_marketing/emailmarketing.html">email campaign</a>.
+        This type of webpages typically has a single objective, make the visitor complete your call to action. Focusing on one
+        goal makes this landing pages the best tool to increase the conversion rates of your marketing campaigns. We design with you the landing
         pages layouts that suit your marketing objectives.
 
 
@@ -131,7 +131,7 @@
         <ul>
           <li>◼ Design different landing pages depending on your objective</li>
           <li>◼ Tailor landing pages to your digital marketing strategy</li>
-          <li>◼ Design the funnel sequence of landing page to achieve sale conversion</li>
+          <li>◼ Design the funnel sequence of landing pages to achieve sale conversion</li>
           <li>◼ Integration of your landing pages with main marketing tools available</li>
         </ul>
 
