--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -119,10 +119,10 @@
       </div>
       <div class="col">
         <p class=" mb-1">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
-        to a website. The higher a website ranks on Google for a keyword, the more relevant and abundant the website traffic
+        to your website. The higher your website ranks on Google for a keyword, the more relevant and abundant the website traffic
         will be, therefore increasing your chances of sales conversion.
         SEO is an ongoing process that requires monitoring and adjusting on a regular basis to keep you ranking as high as
-        possible on the Google search pages. We can help you create the strategy to get your website visible and report on key
+        possible on the Google search pages. We can help you create the strategy to get your website visible for your chosen keywords and report on key
         ranking parameters to adjust the strategy.
 
 
