--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -117,12 +117,12 @@
         <img src="../images/coding.png" alt="laptop screen with lines of codes on dark background" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Not all business websites require the use of complex features or design. We carry out an audit of where you are
+        <p class=" mb-1">Not all business websites require the use of complex features or design. Before we start, we carry out an review of where you are
         currently and where you're wanted to be in the short to long term to make a recommendation on the most suitable option
         for your situation. We offer services ranging for fully custom coded websites to CMS build websites on Wix, SquareSpace
         or Shopify for example. We take you through the entire process from creating the layout via wireframes to registering
-        your domain, hosting and publishing your website for the world to see. All webpages are optimised for best SEO ranking
-        making it easier for your customers to find you.
+        your domain, hosting and publishing your website for the world to see. All webpages are optimised for best <a href="./../web_development/seo.html"> SEO ranking</a>
+        making it easier for your customers to find you. If you have an existing website we can also <a href="./../web_development/websiteaudit.html">review</a> it and make suggestions on how we can help.
   
           </br>
           We can help you with:
