--- a/web_development/websiteaudit.html
+++ b/web_development/websiteaudit.html
@@ -121,7 +121,7 @@
       <div class="col">
         <p class=" mb-1">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
         performance and/or the user experience. This is a great tool to help identify the areas of the website that needs
-        optimising to increase your engagement and overall SEO ranking.
+        optimising to increase your engagement and overall <a href= "./../web_development/seo.html">SEO ranking</a>.
           </br>
           We can help you with:
         </p>
