Updated footer with link to new privacy policy and term of use

--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
           project in mind yet!
         </p><br />
         <p class="bio mb-1">
-          I can help with creating beautiful functional websites, eye catching branding and graphics. Click below to
+          We can help with creating beautiful functional websites, eye catching branding and graphics. Click below to
           learn more.
         </p>
       </div>
@@ -414,7 +414,7 @@ We design static and dynamic websites depending on requirements.<br/>
   <div class="container">
     <div class="row">
       <div class="col-1">
-        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
       </div>
       <div class="col-11 email-footer">
         <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
@@ -425,7 +425,8 @@ We design static and dynamic websites depending on requirements.<br/>
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
       Use</a>
   </div>
 
