--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -160,18 +160,20 @@
   <div class="container">
     <div class="row">
       <div class="col-1">
-<img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
       </div>
       <div class="col-11 email-footer">
-<a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
-Christchurch, New Zealand
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
       </div>
     </div>
 
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
+      Use</a>
   </div>
 
 </footer>
