--- a/digital_marketing/digitalstrategy.html
+++ b/digital_marketing/digitalstrategy.html
@@ -178,7 +178,8 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
       Use</a>
   </div>
 
