--- a/thankyou.html
+++ b/thankyou.html
@@ -123,16 +123,26 @@
   </div>
   
   </body>
-  <footer>
-    <div class="social-links d-flex justify-content-center">
-      <a href="https://www.facebook.com/creafixdesign" title="Facebook page"><i class="fab fa-facebook"></i></a>
-      <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i
-          class="fab fa-github"></i></a>
-      <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
-      <a href="https://www.linkedin.com/company/creafix-design" title="LinkdIn profile"><i
-          class="fab fa-linkedin"></i></a>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
     </div>
-  
-  </footer>
+
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
+      Use</a>
+  </div>
+
+</footer>
   
   </html>
