--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -163,7 +163,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1">
-        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
       </div>
       <div class="col-11 email-footer">
         <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
@@ -174,10 +174,10 @@
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
       Use</a>
   </div>
-
 
 </footer>
 
