--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ you reach your goals while you stay free to focus on what you do best.</p>
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a href="./websitetermofuse.html">Website Terms of
       Use</a>
   </div>
 
