--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -167,24 +167,24 @@
   
   </body>
 <footer>
-<div class="container">
-  <div class="row">
-    <div class="col-1">
-      <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
     </div>
-    <div class="col-11 email-footer">
-      <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
-      Christchurch, New Zealand
-    </div>
+
+
   </div>
-
-
-</div>
-<div id="terms">
-  © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
-    Use</a>
-</div>
-
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
