Start responsive update

--- a/about.html
+++ b/about.html
@@ -401,13 +401,12 @@ We design static and dynamic websites depending on requirements.<br/>
   </div>
 </div>
 
-<div class="row mt-2">
-  <div class="col-md-4"></div>
-  <div class="col-md-4 text-center work-button">
+<div class="row mt-2 justify-content-center">
+  
+  <div class="col-sm-3 work-button">
     <a href="index.html#contact" class="contact-link " title="Contact me">Work with us</a>
   </div>
-  <div class="col-md-4"></div>
-</div>
+  </div>
 
     </body>
 <footer>
