--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -133,8 +133,8 @@
   our Site; which we would consider inappropriate; or which might bring us or our Site into disrepute, including (without
   limitation):
   <ul>
-  <li>◼ anything that would constitute a breach of an individual's privacy (including uploading private or personal</li>
-  information without an individual's consent) or any other legal rights;
+  <li>◼ anything that would constitute a breach of an individual's privacy (including uploading private or personal
+  information without an individual's consent) or any other legal rights;</li>
   <li>◼ using our Site to defame, harass, threaten, menace or offend any person;</li>
  <li>◼ interfering with any user using our Site;</li>
  <li>◼ tampering with or modifying our Site, knowingly transmitting viruses or other disabling features, or damaging or
@@ -274,10 +274,10 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class=""></div>
       </div>
-      <div class="col-11 email-footer">
+      <div class="col-md-auto email-footer">
         <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
         Christchurch, New Zealand
       </div>
@@ -287,8 +287,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
